--- a/website/base/templates/base.html
+++ b/website/base/templates/base.html
@@ -1,7 +1,6 @@
 {% load static %}
 {% load wagtailuserbar %}
 {% load wagtailmetadata_tags %}
-{% load wagtailimages_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,7 +9,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  {% meta_tags %}
+  {% if page %}
+      {% meta_tags %}
+  {% endif %}
   <meta name="author" content="">
 
 {% comment %}
@@ -46,12 +47,7 @@
 {% include "partials/main_menu.html" %}
 
   <!-- Page Header -->
-  <header class="masthead" 
-  {% if page.image %}
-    {% image page.image fill-1900x600 format-jpeg as tmp_photo %}
-    style="background-image: url('{{ tmp_photo.url }}')"
-  {% endif %}
-  >
+  <header class="masthead" style="{% block head_style %} {% endblock %}"  >
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -73,11 +69,12 @@
         <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 
-        {# Custom scripts for this template #}
-        <script type="text/javascript" src="{% static 'js/clean-blog.min.js' %}"></script>
-
         {# Vue js script #}
         <script type="text/javascript" src="{% static 'js/vue.js' %}"></script>
+        
+        {# Custom scripts for this template #}
+        <script type="text/javascript" src="{% static 'js/clean-blog.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/blog.min.js' %}"></script>
 
         {# Axious js script #}
         <script type="text/javascript" src="{% static 'js/axios.min.js' %}"></script>
