--- a/website/base/templates/blog/blog_page.html
+++ b/website/base/templates/blog/blog_page.html
@@ -2,6 +2,14 @@
 
 {% load wagtailcore_tags %}
 {% load i18n %}
+{% load wagtailimages_tags %}
+
+{% block head_style %}
+  {% if page.image %}
+    {% image page.image fill-1900x600 format-jpeg as tmp_photo %}
+    background-image: url('{{ tmp_photo.url }}')
+  {% endif %}
+{% endblock %}
 
 {% block heading %}
 <div class="post-heading">
@@ -21,6 +29,11 @@
 		    {% for block in page.body %}
 	        	{% include_block block %}
 		    {% endfor %}
+        <div class="text-right">
+        	{% for t in page.tags.all %}
+        		<a href="{% url 'tag' %}?query={{ t.slug }}" class="badge badge-info">{{ t }}</a> 
+        	{% endfor %}
+        </div>
         </div>
       </div>
     </div>
