--- a/website/base/templates/blog/flat_page.html
+++ b/website/base/templates/blog/flat_page.html
@@ -2,6 +2,14 @@
 
 {% load wagtailcore_tags %}
 {% load i18n %}
+{% load wagtailimages_tags %}
+
+{% block head_style %}
+  {% if page.image %}
+    {% image page.image fill-1900x600 format-jpeg as tmp_photo %}
+    background-image: url('{{ tmp_photo.url }}')
+  {% endif %}
+{% endblock %}
 
 {% block heading %}
 <div class="page-heading">
