--- a/website/base/templates/blog/root_page.html
+++ b/website/base/templates/blog/root_page.html
@@ -2,13 +2,10 @@
 
 {% load wagtailcore_tags %}
 {% load i18n %}
-{% load wagtailimages_tags %}
+
 
 {% block head_style %}
-  {% if page.image %}
-    {% image page.image fill-1900x600 format-jpeg as tmp_photo %}
-    background-image: url('{{ tmp_photo.url }}')
-  {% endif %}
+  {% include "blog/partials/head_style.html" %}
 {% endblock %}
 
 {% block heading %}
@@ -71,7 +68,7 @@
     },
     computed: {
       request_url() {
-        return `{% url 'api:blog_pages_list' %}?page=${this.current_page}`
+        return `{% url 'api:blog_pages_list' %}?page=${this.current_page}`;
       }
     },
   }
