--- a/website/base/templates/partials/main_menu.html
+++ b/website/base/templates/partials/main_menu.html
@@ -10,7 +10,7 @@
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto align-items-center">
       	{% for item in settings.blog.MainMenu.items.all %}
           <li class="nav-item">
             <a class="nav-link" href="{% pageurl item.page %}">{{ item.page.title }}</a>
