добавлен pgbouncer и memcached, настроено кеширование меню и футера

--- a/website/base/templates/partials/footer.html
+++ b/website/base/templates/partials/footer.html
@@ -1,5 +1,8 @@
+{% load cache %}
+
   <hr>
   <!-- Footer -->
+{% cache 60 footer %}
   <footer>
     <div class="container">
       <div class="row">
@@ -41,3 +44,4 @@
       </div>
     </div>
   </footer>
+{% endcache %}
