--- a/website/base/templates/partials/main_menu.html
+++ b/website/base/templates/partials/main_menu.html
@@ -1,7 +1,9 @@
 {% load wagtailcore_tags %}
 {% load i18n %}
+{% load cache %}
 
 <!-- Navigation -->
+{% cache 60 navigation %}
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="/">{{ settings.blog.MainMenu.home_link_text }}</a>
@@ -23,7 +25,7 @@
                 <div class="d-inline-flex flex-nowrap align-items-center" >
                 <a class="nav-link" href="#" role='submit' style="color:white;" v-on:click.prevent='CloseSearch'><i class="fa fa-times"></i></a>
 
-                <input class='form-control' type="text" name="query" {% if search_query %} value="{{ search_query }}"{% endif %}>
+                <input class='form-control' type="text" name="query" placeholder="{% translate "Search" %}">
                 
                 <a class="nav-link" role='submit' href="#" v-on:click.prevent="sendform" style="color:white;"><i class="fa fa-search"></i></a>
                 </div>
@@ -34,3 +36,4 @@
       </div>
     </div>
   </nav>
+{% endcache %}
