--- a/website/base/templates/base.html
+++ b/website/base/templates/base.html
@@ -70,7 +70,7 @@
         <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 
         {# Vue js script #}
-        <script type="text/javascript" src="{% static 'js/vue.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/vue.min.js' %}"></script>
         
         {# Custom scripts for this template #}
         <script type="text/javascript" src="{% static 'js/clean-blog.min.js' %}"></script>
